[gd_scene load_steps=37 format=3 uid="uid://djculbglj2yia"]

[ext_resource type="Script" path="res://src/dino/players/SSPlayer.gd" id="1_blpj0"]
[ext_resource type="Texture2D" uid="uid://cejwgbx007lhb" path="res://src/dino/players/hatbot/greyhat.png" id="2_nu7so"]
[ext_resource type="Theme" path="res://src/themes/StateLabelTheme.tres" id="3_gwyf6"]
[ext_resource type="Texture2D" uid="uid://d1bamxxlm862r" path="res://src/dino/players/greyhat_jetflame_sheet.png" id="6_7oqkp"]
[ext_resource type="FontFile" uid="uid://b1c3fty8httvk" path="res://addons/core/assets/fonts/at01.ttf" id="7_lxjfb"]
[ext_resource type="PackedScene" uid="uid://dgan7tpytfkfo" path="res://src/dino/players/sidescroller_machine/SSMachine.tscn" id="7_rj434"]
[ext_resource type="PackedScene" uid="uid://bfatjgmhlkjne" path="res://addons/core/actions/ActionHint.tscn" id="9_dlhwa"]
[ext_resource type="PackedScene" uid="uid://cp33t2x7q044h" path="res://src/components/quick_select/QuickSelect.tscn" id="10_e40tc"]
[ext_resource type="PackedScene" path="res://addons/core/actions/ActionDetector.tscn" id="10_lf38g"]
[ext_resource type="PackedScene" path="res://src/effects/HeartParticles.tscn" id="12_1yter"]
[ext_resource type="PackedScene" uid="uid://nhgggwr4im2y" path="res://src/dino/players/PlayerCamera.tscn" id="12_od118"]
[ext_resource type="PackedScene" path="res://src/effects/SkullParticles.tscn" id="13_1yrmg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umtbi"]
size = Vector2(14, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5bf"]
atlas = ExtResource("2_nu7so")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwbq7"]
atlas = ExtResource("2_nu7so")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e10ir"]
atlas = ExtResource("2_nu7so")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksm1j"]
atlas = ExtResource("2_nu7so")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn12a"]
atlas = ExtResource("2_nu7so")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h68fi"]
atlas = ExtResource("2_nu7so")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvgh6"]
atlas = ExtResource("2_nu7so")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u86m"]
atlas = ExtResource("2_nu7so")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qhg2"]
atlas = ExtResource("2_nu7so")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqq4t"]
atlas = ExtResource("2_nu7so")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2r4e"]
atlas = ExtResource("2_nu7so")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw8cy"]
atlas = ExtResource("2_nu7so")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai0af"]
atlas = ExtResource("2_nu7so")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g0wb"]
atlas = ExtResource("2_nu7so")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afho3"]
atlas = ExtResource("2_nu7so")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7g5pp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5bf")
}],
"loop": true,
"name": &"air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwbq7")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e10ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksm1j")
}],
"loop": false,
"name": &"dying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5bf")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"falling",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"get_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"grab",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"grabbed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"hit_ground",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h68fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h68fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"jetpack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvgh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u86m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qhg2")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"jump_kick",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"kick",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"kicked",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqq4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2r4e")
}],
"loop": false,
"name": &"knocked_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"landed",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"punch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"punch_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"punched",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai0af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g0wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afho3")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"run_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"run_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"run_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": false,
"name": &"throw",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"thrown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn12a")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ygel"]
atlas = ExtResource("6_7oqkp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdjp"]
atlas = ExtResource("6_7oqkp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3vdl"]
atlas = ExtResource("6_7oqkp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgeck"]
atlas = ExtResource("6_7oqkp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nppfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ygel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3vdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgeck")
}],
"loop": true,
"name": &"all",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ygel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdjp")
}],
"loop": true,
"name": &"init",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48he4"]
size = Vector2(96, 96)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3mi8x"]
radius = 8.0
height = 28.0

[node name="SSHatBot" type="CharacterBody2D" groups=["actors", "player"]]
collision_layer = 2
collision_mask = 3129
script = ExtResource("1_blpj0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_umtbi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7g5pp")
animation = &"get_up"
flip_h = true
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://src/dino/players/hatbot/assets/greyhat.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "4578dca73d3f3bd553905d6377f42626"

[node name="StateLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -45.0
offset_right = 45.0
offset_bottom = 40.0
theme = ExtResource("3_gwyf6")
bbcode_enabled = true
text = "[center]state"
scroll_active = false

[node name="BulletPosition" type="Marker2D" parent="."]
position = Vector2(-12, -12)

[node name="Jet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 5)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nppfr")
animation = &"init"

[node name="NotifLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -40.0
offset_top = -64.0
offset_right = 40.0
offset_bottom = -32.0
theme_override_fonts/normal_font = ExtResource("7_lxjfb")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "some sparkle"
fit_content = true
scroll_active = false

[node name="SSMachine" parent="." instance=ExtResource("7_rj434")]

[node name="ActionHint" parent="." instance=ExtResource("9_dlhwa")]
position = Vector2(0, -40)
scale = Vector2(0.4, 0.4)
action_name = ""

[node name="ActionDetector" parent="." instance=ExtResource("10_lf38g")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionDetector"]
shape = SubResource("RectangleShape2D_48he4")

[node name="QuickSelect" parent="." instance=ExtResource("10_e40tc")]

[node name="Bumpbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumpbox"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_3mi8x")

[node name="HeartParticles" parent="." instance=ExtResource("12_1yter")]

[node name="SkullParticles" parent="." instance=ExtResource("13_1yrmg")]

[node name="PlayerCamera" parent="." instance=ExtResource("12_od118")]
